Quorum3/Library/Tests/Expressions/Pass/OutputBoolean.quorum
class Main 
    action Main
        output true
    end
end