Quorum3/Library/Tests/Expressions/Fail/ClassMain1.quorum
class Main 
    action Main
        
    end
end